# tab-sync

./: .gitignore  README.md  flake.nix  justfile  lefthook.yml
extension/: .oxfmtrc.json  .oxlintrc.json  .prettierrc.json  eslint.config.js  package.json  web-ext.config.ts  wxt.config.ts
extension/src/lib/: delta.ts  (+9 more)
onetab-chrome-src/: manifest.json  wxt.config.ts
onetab-firefox-src/: ext-onetab-concatenated-sources-import.js  ext-onetab-concatenated-sources-options.js  ext-onetab-concatenated-sources-popup.js  onetab-single-instance-behavior.unminified.js  placeholder.html
onetab-reimplemented/: ext-onetab-concatenated-sources-background.js  ext-onetab-concatenated-sources-contentscript.js  ext-onetab-concatenated-sources-import.js  ext-onetab-concatenated-sources-localisation.js  ext-onetab-concatenated-sources-one-tab.com-contentscript.js  ext-onetab-concatenated-sources-onetab.js  ext-onetab-concatenated-sources-options.js  ext-onetab-concatenated-sources-placeholder.js  ext-onetab-concatenated-sources-popup.js  ext-onetab-concatenated-sources-shared-page-permission.js  manifest.json  package.json  playwright.config.ts  web-ext.config.ts
onetab-src/: ext-onetab-concatenated-sources-background.js  ext-onetab-concatenated-sources-localisation.js  ext-onetab-concatenated-sources-onetab.js  ext-onetab-concatenated-sources-placeholder.js  ext-onetab-concatenated-sources-shared-page-permission.js  extension@one-tab.com.xpi  manifest.json  mozilla-recommendation.json  (+1 more)
server/: Cargo.toml
server/src/database/: backup.rs
server/src/server/: delta.rs  socket.rs
(+47 files in other folders)
