[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonrpsee = { version = "0.26.0", features = ["server", "macros", "client-ws-transport-tls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
# tokio-stream = { workspace = true, features = ["sync"] }
# serde_json = { workspace = true }
# tower-http = { workspace = true, features = ["cors", "compression-full", "sensitive-headers", "trace", "timeout"] }
# tower = { workspace = true, features = ["timeout"] }
# hyper = { workspace = true }
# hyper-util = { workspace = true, features = ["client", "client-legacy"]}
# console-subscriber = { workspace = true }

# probably want serde json...
# want to define the rpc types somewhere...
